gitops/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    deployment: triton-server
  name: triton-server
spec:
  ports:
  - name: api
    port: 8000
    targetPort: 8000
  - name: grpc
    port: 8001
    targetPort: 8001
  - name: metrics
    port: 8002
    targetPort: 8002
  selector:
    deployment: triton-server
  sessionAffinity: None
  type: ClusterIP
